...
import { add, informationCircle } from "ionicons/icons";
import LocalizeBackButton from "../components/LocalizeBackButton";
import { EXTEND_YEARS } from '../constants/Constants'
import './Add.css'
import { appendLocalTimezone } from "../lib/Countdate";

const Add: React.FC<{ accent: string }> = ({ accent }) => {
  const { t } = useTranslation();
  const [selectedDate, setSelectedDate] = useState(
    appendLocalTimezone(formatDateISO(new Date()))
  );
  const [titleText, setTitleText] = useState<string | number>("");
  const [years,setYears] = useState(2);
...
                <IonItem className="ion-no-padding">
                  <IonLabel position="stacked">
                    {t("p.add.eventName.label")}
                  </IonLabel>
                  <IonInput
                    aria-label="name"
                    id="event-title"
                    onKeyDown={(e) => SearchF(e.key)}
                    clearInput={true}
                    value={titleText}
                    placeholder={
                      t("p.add.eventName.placeholder")
                    }
...
